fix: fix the double scroll in the browser

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -428,7 +428,6 @@ input[type="submit"] {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
   overflow: auto; /* Enable scroll if needed */
   background-color: rgba(0, 0, 0, 0.3);
 }
@@ -547,7 +546,6 @@ input[type="submit"] {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
   overflow: auto; /* Enable scroll if needed */
   background-color: rgba(0, 0, 0, 0.3);
 }
